--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="MAVIA - Register, Reservation, Questionare, Reviews form wizard">
 	<meta name="author" content="Ansonika">
-	<title>MAVIA | Register, Reservation, Questionare, Reviews form wizard</title>
+	<title>DIGC | Online Giving </title>
 
 	<!-- Favicons-->
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 	<link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
 	<link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
 	<link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
@@ -54,7 +54,7 @@
 		    <div class="row">
                 <div class="col-3">
                     <div id="logo_home">
-                        <h1><a href="index.html">DUNAMIS GOSPEL INTERNATIONAL | </a></h1>
+                        <h1><a href="index.html">DUNAMIS INTERNATIONAL GOSPEL CHURCH </a></h1>
                     </div>
                 </div>
                 <div class="col-9">
@@ -69,10 +69,8 @@
                     <!-- /social -->
                     <nav>
                         <ul class="cd-primary-nav">
-                            <li><a href="index.html" class="animated_link">Register Version</a></li>
-                            <li><a href="reservation_version.html" class="animated_link">Reservation Version</a></li>
-                            <li><a href="questionare_version.html" class="animated_link">Questionare Version</a></li>
-                            <li><a href="review_version.html" class="animated_link">Review Version</a></li>
+                            <li><a href="index.html" class="animated_link">Home</a></li>
+                            <li><a href="reservation_version.html" class="animated_link">Give</a>
                             <li><a href="about.html" class="animated_link">About Us</a></li>
                             <li><a href="contacts.html" class="animated_link">Contact Us</a></li>
                         </ul>
@@ -1075,7 +1073,7 @@
 										<textarea name="additional_message" class="form-control" style="height:150px;" placeholder="Hello world....write your messagere here!"></textarea>
 									</div>
 									<div class="form-group terms">
-										<input name="terms" type="checkbox" class="icheck required" value="yes">
+										<input name="terms" type="checkbox" class="required" value="yes">
 										<label>Please accept <a href="#" data-toggle="modal" data-target="#terms-txt">terms and conditions</a> ?</label>
 									</div>
 								</div>
